@@ -81,7 +81,7 @@ public class DoubleSTAttribute extends CMLAttribute {
 	public DoubleSTAttribute(DoubleSTAttribute att) {
 		super(att);
 		if (att.d != null) {
-			this.d = new Double(att.d.doubleValue());
+			this.d = Double.valueOf(att.d.doubleValue());
 		}
 	}
 
@@ -151,7 +151,7 @@ public class DoubleSTAttribute extends CMLAttribute {
 	 */
 	public void setCMLValue(double d) {
 		checkValue(d);
-		this.d = new Double(d);
+		this.d = Double.valueOf(d);
 		this.setValue("" + d);
 	}
 
