@@ -63,7 +63,7 @@ public class IntSTAttribute extends CMLAttribute {
     public IntSTAttribute(IntSTAttribute att) {
         super(att);
         if (att.i != null) {
-            this.i = new Integer(att.i.intValue());
+            this.i = Integer.valueOf(att.i.intValue());
         }
     }
     /** copy.
@@ -111,7 +111,7 @@ public class IntSTAttribute extends CMLAttribute {
      */
     public void setCMLValue(int i) {
         checkValue(i);
-        this.i = new Integer(i);
+        this.i = Integer.valueOf(i);
         this.setValue(S_EMPTY + i);
     }
 
